--- a/STR-chatbot/lesson-4-vectorstores-and-embeddings.ipynb
+++ b/STR-chatbot/lesson-4-vectorstores-and-embeddings.ipynb
@@ -170,7 +170,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9631600568972432"
+       "0.963220689072572"
       ]
      },
      "execution_count": 10,
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7710273699286989"
+       "0.771106734568816"
       ]
      },
      "execution_count": 11,
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7595834100983062"
+       "0.7596423521230876"
       ]
      },
      "execution_count": 12,
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,11 +418,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "docs = vectordb.similarity_search(question,k=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(page_content='symptom onset and death and disease duration in genetic frontotemporal dementia: an international \\nretrospective cohort study. Lancet Neurol. 2020;19:145–56. PubMed PMID: 31810826 .\\nMora JS, Genge A, Chio A, Estol CJ, Chaverri D, Hernández M, Marín S, Mascias J, Rodriguez GE, Povedano M, \\nPaipa A, Dominguez R, Gamez J, Salvado M, Lunetta C, Ballario C, Riva N, Mandrioli J, Moussy A, Kinet JP , \\nAuclair C, Dubreuil P , Arnold V , Mansfield  CD, Hermine O, et al. Masitinib as an add-on therapy to riluzole \\nin patients with amyotrophic lateral sclerosis: a randomized clinical trial. Amyotroph Lateral Scler \\nFrontotemporal Degener. 2020;21:5–14. PubMed PMID: 31280619 .\\nMori K, Arzberger T, Grässer FA, Gijselinck I, May S, Rentzsch K, Weng SM, Schludi MH, van der Zee J, Cruts \\nM, Van Broeckhoven C, Kremmer E, Kretzschmar HA, Haass C, Edbauer D. Bidirectional transcripts of the \\nexpanded C9orf72 hexanucleotide repeat are translated into aggregating dipeptide repeat proteins. Acta \\nNeuropathol. 2013a;126:881–93. PubMed PMID: 24132570 .\\nMori K, Lammich S, Mackenzie IR, Forné I, Zilow S, Kretzschmar H, Edbauer D, Janssens J, Kleinberger G, \\nCruts M, Herms J, Neumann M, Van Broeckhoven C, Arzberger T, Haass C. hnRNP A3 binds to GGGGCC \\nrepeats and is a constituent of p62-positive/TDP43-negative inclusions in the hippocampus of patients with \\nC9orf72 mutations. Acta Neuropathol. 2013b;125:413–23. PubMed PMID: 23381195 .', metadata={'page': 21, 'source': 'docs/NBK268647.pdf'})"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docs[0]"
    ]
   },
   {
@@ -437,26 +457,6 @@
       ]
      },
      "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "docs[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Document(page_content='symptom onset and death and disease duration in genetic frontotemporal dementia: an international \\nretrospective cohort study. Lancet Neurol. 2020;19:145–56. PubMed PMID: 31810826 .\\nMora JS, Genge A, Chio A, Estol CJ, Chaverri D, Hernández M, Marín S, Mascias J, Rodriguez GE, Povedano M, \\nPaipa A, Dominguez R, Gamez J, Salvado M, Lunetta C, Ballario C, Riva N, Mandrioli J, Moussy A, Kinet JP , \\nAuclair C, Dubreuil P , Arnold V , Mansfield  CD, Hermine O, et al. Masitinib as an add-on therapy to riluzole \\nin patients with amyotrophic lateral sclerosis: a randomized clinical trial. Amyotroph Lateral Scler \\nFrontotemporal Degener. 2020;21:5–14. PubMed PMID: 31280619 .\\nMori K, Arzberger T, Grässer FA, Gijselinck I, May S, Rentzsch K, Weng SM, Schludi MH, van der Zee J, Cruts \\nM, Van Broeckhoven C, Kremmer E, Kretzschmar HA, Haass C, Edbauer D. Bidirectional transcripts of the \\nexpanded C9orf72 hexanucleotide repeat are translated into aggregating dipeptide repeat proteins. Acta \\nNeuropathol. 2013a;126:881–93. PubMed PMID: 24132570 .\\nMori K, Lammich S, Mackenzie IR, Forné I, Zilow S, Kretzschmar H, Edbauer D, Janssens J, Kleinberger G, \\nCruts M, Herms J, Neumann M, Van Broeckhoven C, Arzberger T, Haass C. hnRNP A3 binds to GGGGCC \\nrepeats and is a constituent of p62-positive/TDP43-negative inclusions in the hippocampus of patients with \\nC9orf72 mutations. Acta Neuropathol. 2013b;125:413–23. PubMed PMID: 23381195 .', metadata={'page': 21, 'source': 'docs/NBK268647.pdf'})"
-      ]
-     },
-     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,21 +480,21 @@
    "source": [
     "## Failure mode #2: Not obeying the question \n",
     "\n",
-    "The question below asks a question about the third lecture, but includes results from other lectures as well."
+    "The question below asks a question about a particular pdf, but includes results from other pdfs as well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = \"what did they say about regression in the third lecture?\""
+    "question = \"what did they say about disorders in the article by Gossye?\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,18 +503,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'page': 0, 'source': 'docs/cs229_lectures/MachineLearning-Lecture03.pdf'}\n",
-      "{'page': 2, 'source': 'docs/cs229_lectures/MachineLearning-Lecture02.pdf'}\n",
-      "{'page': 14, 'source': 'docs/cs229_lectures/MachineLearning-Lecture03.pdf'}\n",
-      "{'page': 0, 'source': 'docs/cs229_lectures/MachineLearning-Lecture02.pdf'}\n",
-      "{'page': 6, 'source': 'docs/cs229_lectures/MachineLearning-Lecture03.pdf'}\n"
+      "{'page': 17, 'source': 'docs/NBK268647.pdf'}\n",
+      "{'page': 17, 'source': 'docs/NBK268647.pdf'}\n",
+      "{'page': 6, 'source': 'docs/NBK1513.pdf'}\n",
+      "{'page': 9, 'source': 'docs/NBK268647.pdf'}\n",
+      "{'page': 9, 'source': 'docs/NBK268647.pdf'}\n"
      ]
     }
    ],
@@ -525,30 +525,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data sets as well. So don’t want to talk about  that. If you’re interested, look up the work \n",
-      "of Andrew Moore on KD-trees. He, sort of, fi gured out ways to fit these models much \n",
-      "more efficiently. That’s not something I want  to go into today. Okay? Let me move one. \n",
-      "Let’s take more questions later.  \n",
-      "So, okay. So that’s locally weighted regres sion. Remember the outline I had, I guess, at \n",
-      "the beginning of this lecture. What I want to do now is talk about a probabilistic interpretation of linear regres sion, all right? And in partic ular of the – it’ll be this \n",
-      "probabilistic interpretati on that let’s us move on to talk  about logistic regression, which \n",
-      "will be our first classification algorithm. So le t’s put aside locally weighted regression for \n",
-      "now. We’ll just talk about ordinary unwei ghted linear regression. Let’s ask the question \n",
-      "of why least squares, right? Of all the thi ngs we could optimize how do we come up with \n",
-      "this criteria for minimizing the square of  the area between the predictions of the \n",
-      "hypotheses and the values Y predicted. So w hy not minimize the absolute value of the \n",
-      "areas or the areas to the power of four or something? What I’m going to do now is \n",
-      "present one set of assumptions that will serve to “justify” why we’re minimizing the sum \n",
-      "of square zero. Okay?  \n",
-      "It turns out that there are many assumptions th at are sufficient to justify why we do least \n",
-      "squares and this is just one of them. So ju st because I present one set of assumptions\n"
+      "Table 4. continued from previous page.System/ConcernEvaluationCommentGenetic \n",
+      "counselingBy genetics professionals 2To inform affected  persons & their families re nature, MOI, & \n",
+      "implications of C9orf72 -FTD/ALS spectrum to facilitate medical & \n",
+      "personal decision makingFamily support \n",
+      "& resourcesAssess need for:\n",
+      "•Community or online resources  such \n",
+      "as Parent to Parent ;\n",
+      "•Social work involvement for parental \n",
+      "support;\n",
+      "•Home nursing referral.•Early discussion of advanced care planning\n",
+      "•The affected  person's perspective & burden must be \n",
+      "considered in clinical decision making.\n",
+      "•The presence of cognitive impairment may raise ethical \n",
+      "concerns.ADL = activities of daily living; EMG = electromyography; LMN = lower motor neuron; MOI = mode of inheritance; OT = \n",
+      "occupational therapy; PT = physical therapy; UMN = upper motor neuron1. Devenney et al [2014] , Piguet et al [2017] , Oskarsson et al [2018] , Masrori & Van Damme [2020] 2. Medical geneticist, certified  genetic counselor, or certified  advanced genetic nurse\n",
+      "Treatment of Manifestations\n",
+      "Many individuals benefit  from care by a multidisciplinary team that includes a neurologist, specially trained \n",
+      "nurses, pulmonologist, speech therapist, physical therapist, occupational therapist, respiratory therapist, \n",
+      "nutritionist, psychologist, social worker, and genetic counselor.\n"
      ]
     }
    ],
@@ -560,7 +562,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Approaches discussed in the next lecture can be used to address both!"
+    "## Next steps \n",
+    "\n",
+    "Approaches discussed in the next lecture can be used to address both failure modes"
    ]
   },
   {
