add comments to run-local-llm.ipynb

--- a/run-local-llm.ipynb
+++ b/run-local-llm.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ollama serve\n",
+    "# c.f. run-local-llm.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# pip install --upgrade langchain langchain-community"
    ]
   },
@@ -36,6 +46,7 @@
    "source": [
     "from langchain_community.llms import Ollama\n",
     "\n",
+    "# https://python.langchain.com/docs/guides/local_llms#quickstart\n",
     "llm = Ollama(model=\"llama2\")\n",
     "llm(\"The first man on the moon was ...\")"
    ]
